--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "gatsby-plugin-purgecss": "5.0.0",
     "gatsby-plugin-react-helmet": "3.2.1",
     "gatsby-plugin-sharp": "2.5.4",
+    "gatsby-plugin-styled-components": "^3.2.1",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-helmet": "5.2.1"
+    "react-helmet": "5.2.1",
+    "styled-components": "^5.1.0"
   },
   "keywords": [
     "gatsby",
